# freertos_hello_world

./: .gitmodules  CMakeLists.txt  README.md
main/: main.c
